# SoftActuatorTesting

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: README.md  artifact-schemas.md  continuation-plan.md  hardware-4k60-acceptance.md  maintainer-guide.md  operator-guide.md  test-and-release.md  troubleshooting.md
docs/architecture/: 0001-ui-framework-and-qt-boundaries.md  0002-artifact-versioning-and-legacy-compatibility.md  0003-concurrency-and-run-finalization.md  0004-capture-pipeline-benchmark.md  0005-ui-shell-evaluation.md  README.md  analysis-pipeline.md  analysis-review-ui.md  calibration-workflow-test-plan.md  camera-capture-implementation.md  dependency-licenses.md  desktop-packaging.md  manual-accessibility-dpi-evidence-matrix.md  marker-suggestions.md  presenter-state-contracts.md  production-instrument-console-composition.md  quality-data-integrity.md  quality-resource-lifecycle.md  quality-ui-accessibility.md  run-lifecycle-implementation.md  serial-protocol-and-test-plan.md  shared-workflow-pages.md  test-plan.md  ui-foundation.md  video-geometry-workflow.md  workflow-page-module-ownership.md  workspace-lifecycle.md
docs/initial-implementation/: README.md  calibration-and-video.md  data-collection.md  nidaqmx-integration.md  notebook-analysis.md
old-files/: DataCollection-V2.py  PneumaticActuatorAnalysis-V1.ipynb  PressureCalibration.py  README.md  VideoConfig.py  pyproject.toml
src/soft_actuator_testing/: __init__.py  __main__.py  bootstrap.py
tests/: test_desktop_packaging.py  test_import_boundaries.py  test_package.py
tests/application/: __init__.py  test_analysis_pipeline.py  test_calibration_workflow.py  test_camera_capture.py  test_marker_suggestion.py  test_marker_suggestion_pipeline.py  test_presentation.py  test_run_controller.py  test_serial_controller.py  (+3 more)
tools/: frozen_entrypoint.py  package_desktop.py  packaging_ui_smoke.py  smoke_desktop.py
(+140 files in other folders)
